fix: image frame alignment

--- a/index.css
+++ b/index.css
@@ -665,7 +665,7 @@ html {
     position: absolute;
     border-radius: 10rem;
 
-    right: -.77rem;
+    right: -.8rem;
     bottom: 49.5%;
 
     width: 1rem;
